# Choose-your-own-Story

./: .gitignore  package-lock.json
backend/: main.py  pyproject.toml
backend/core/: config.py  models.py  prompts.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routers/: job.py  story.py
backend/schemas/: job.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  util.js
frontend/src/componenets/: LoadingStatus.jsx  StoryGame.jsx  StoryLoader.jsx
frontend/src/components/: LoadingStatus.jsx  StoryGame.jsx  StoryGenerator.jsx  StoryLoader.jsx  ThemeInput.jsx
